soup-message-io.c: Fix integer overflow on 32bit

Fixes a bug serving large files, eg, in Rygel.

https://bugzilla.gnome.org/show_bug.cgi?id=638468